fixed overflow issue

--- a/src/containers/Landing/components/Header/index.scss
+++ b/src/containers/Landing/components/Header/index.scss
@@ -1,6 +1,6 @@
 .header {
-    height: 100vh;
     position: relative;
+    overflow: hidden;
 
     .bg {
         height: 100%;
