--- a/src/index.scss
+++ b/src/index.scss
@@ -15,12 +15,10 @@
 
 html {
   scroll-behavior: smooth;
-  overflow: hidden;
 }
 
 body {
   margin: 0;
-  overflow: hidden;
 }
 
 * {
